fix: footer gap and paddings added

--- a/src/layout/Footer/Footer.sass
+++ b/src/layout/Footer/Footer.sass
@@ -2,6 +2,9 @@
 
 .footer-flex
   display: flex
+  padding-top: 2em
+  padding-bottom: 2em
+  gap: 2em
   flex-direction: column
   justify-content: flex-end
   align-items: center
